--- a/app/views/hashtags/index.html.erb
+++ b/app/views/hashtags/index.html.erb
@@ -1,4 +1,4 @@
-<h1>#Hashtags</h1>
+<h1>All #Hashtags</h1>
 
 <% @hashtags.each do |hashtag| %>
 <p>
@@ -6,3 +6,5 @@
 </p>
 
 <%end%>
+
+<%= link_to 'Back', photos_path %>
