Added hashtags to show

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -5,6 +5,12 @@
 <%= @photo.caption %>
 </p>
 
+<p>
+<% @photo.hashtags.each do |hashtag| %>
+#<%= hashtag.text %> 
+<% end %>
+</p>
+
 <%= link_to 'Edit', edit_photo_path(@photo) %> | 
 <td><%= link_to 'Destroy', photo_path(@photo),
               method: :delete,
