--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @photo, :html => { :multipart => true } do |form| %>
-  <%= form.file_field :avatar %>
+ <div> <%= form.file_field :avatar %> </div>
 
    <p>
     <%= form.label :caption %><br>
