--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -7,9 +7,38 @@
 
 <p>
 <% @photo.hashtags.each do |hashtag| %>
-#<%= hashtag.text %> 
+<% string  = '#' + hashtag.text %>
+<%= link_to string, hashtag_path(hashtag) %>
 <% end %>
 </p>
+
+<h3>Comments</h3>
+<% @photo.comments.each do |comment| %>
+  <p>
+    <strong>Commenter:</strong>
+    <%= comment.commenter %>
+  </p>
+ 
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+<h3>Add a comment:</h3c>
+<%= form_for([@photo, @photo.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter %><br>
+    <%= f.text_field :commenter %>
+  </p>
+  <p>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
 
 <%= link_to 'Edit', edit_photo_path(@photo) %> | 
 <td><%= link_to 'Destroy', photo_path(@photo),
