--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -12,6 +12,8 @@
 <% end %>
 </p>
 
+<p>Likes: <%=@photo.likes%></p>
+
 <h3>Comments</h3>
 <% @photo.comments.each do |comment| %>
   <p>
@@ -40,6 +42,7 @@
   </p>
 <% end %>
 
+<%= link_to 'Like', like_photo_path(@photo) %> | 
 <%= link_to 'Edit', edit_photo_path(@photo) %> | 
 <td><%= link_to 'Destroy', photo_path(@photo),
               method: :delete,
