--- a/app/views/hashtags/index.html.erb
+++ b/app/views/hashtags/index.html.erb
@@ -1,3 +1,4 @@
+<div class="page">
 <h1>All #Hashtags</h1>
 
 <% @hashtags.each do |hashtag| %>
@@ -9,3 +10,4 @@
 <%end%>
 
 <%= link_to 'Back', photos_path %>
+<div class="page">
