--- a/app/views/hashtags/show.html.erb
+++ b/app/views/hashtags/show.html.erb
@@ -1,3 +1,4 @@
+<div class="page">
 <h1> #<%= @hashtag.text %> </h1>
 
 <% @hashtag.photos.each do |photo| %>
@@ -11,3 +12,4 @@
 <%end%>
 
 <%= link_to 'Back', hashtags_path %></td>
+</div>
